# Tiralabra-labyrinttigeneraatio

./: .coveragerc  .gitignore  .pylintrc  README.md  aloitusikkuna.py  main.py  pyproject.toml  ruudukko.py  solu.py  syvyyshakuikkuna.py  tasks.py
Tiralabyrintti/nbproject/: project.properties  project.xml
Tiralabyrintti/src/: tiralabyrintti.py
dokumentaatio/: Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti3.md  Viikkoraportti4.md  Viikkoraportti5.md  Viikkoraportti6.md  kayttoohje.md  maarittely.md  testausdokumentaatio.md  toteutus.md
htmlcov/: d_1bc38ad41350a48f_ruudukko_py.html  d_1bc38ad41350a48f_solu_py.html  d_1bc38ad41350a48f_suorituskyky_py.html  d_31b82899485c61de___init___py.html  d_31b82899485c61de_binaaripuu_py.html  d_31b82899485c61de_prim_py.html  d_31b82899485c61de_syvyyshaku_py.html  d_a11bb078606cba32_ruudukko_py.html  d_a11bb078606cba32_solu_py.html  d_de43729aa8cb7297_labyrintit_test_py.html  index.html  status.json
koodi/: main.py  prim.py  ruudukko.py  seina.py  solu.py  suorituskyky.py  ui.py
koodi/labyrintit/: binaaripuu.py  prim.py  syvyyshaku.py
koodi/oliot/: ruudukko.py  solu.py
koodi/testaus/: labyrintit_test.py  soluruudukko_test.py  suorituskyky.py
koodi/ui/: aloitusikkuna.py  binaaripuuikkuna.py  primikkuna.py  syvyyshakuikkuna.py  ui.py
