[tool.poetry]
name = "tiralabra-labyrinttigeneraatio"
version = "0.1.0"
description = ""
authors = ["JuhahuJ <juha.lehtinen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.0.1"
pylint = "^2.11.1"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
